# nurl

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.testing.yaml  script.md
backend/: Cargo.toml
backend/src/: constants.rs  main.rs  middleware.rs  service.rs  structs.rs  utils.rs
backend/src/routes/: auth.rs  health.rs  middleware.rs  mod.rs  redirect.rs  register.rs  shorten.rs
frontend/: package-lock.json  package.json  pnpm-lock.yaml  react-router.config.ts  tsconfig.app.json  vite.config.ts
frontend/.react-router/types/: +register.ts
frontend/.react-router/types/src/+types/: App.ts
frontend/.react-router/types/src/routes/auth/+types/: index.ts
frontend/.react-router/types/src/routes/auth/register/+types/: index.ts
frontend/src/: App.css  App.tsx  index.css  root.tsx  routes.ts
frontend/src/providers/: AuthProvider.tsx  BackendProvider.tsx  index.tsx
frontend/src/providers/theme/: ThemeProvider.tsx  theme.ts
frontend/src/routes/auth/: auth.tsx  styles.css
frontend/src/routes/auth/register/: register.tsx
frontend/src/store/: auth.ts  backend.ts
frontend/src/utils/: api.ts  constants.ts
