[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
chrono = { version = "0.4.41", features = ["serde"]}
dotenv = "0.15.0"
once_cell = "1.21.3"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "uuid", "macros", "chrono", "json", "bigdecimal" ] }
jsonwebtoken = "9"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.17.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
rand = "0.9.1"
nanoid = "0.4.0"
futures = "0.3.31"
tokio = { version = "1.44.2", features = ["time"] }
